Account for CMS overriding prior collector options.